Crição das funções de UpdateUser, DeleteUser
